fix horizontal scroll bug

--- a/client/style.css
+++ b/client/style.css
@@ -1,8 +1,8 @@
-body, input, button, p, li, h1, h2, h3, h4, h5, h6, textarea {
-  font-family: "Source Sans Pro", sans-serif;
-}
+/* functional */
 
-body {
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
   margin: 0;
   font-size: 14px; line-height: 20px;
   color: #333;
@@ -10,6 +10,7 @@ body {
 
 p {
   margin-bottom: 10px;
+  word-break: break-word;
 }
 
 a {
@@ -33,7 +34,6 @@ pre {
 code {
   padding: 2px 4px;
   color: #d14;
-  white-space: nowrap;
   background-color: #f7f7f9;
 }
 
@@ -72,10 +72,6 @@ pre {
   background: #f7f7f9;
 }
 
-.scroller__wrapper {
-  max-width: 640px;
-}
-
 input, textarea {
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   transition: border linear 0.2s, box-shadow linear 0.2s;
@@ -107,6 +103,7 @@ button.btn-search {
 
 .message {
   border: 1px solid #eee;
+  max-width: 100%;
   padding: .5em;
   margin-top: .5em;
   background: white;
@@ -142,10 +139,6 @@ button.btn-search {
   list-style-type: none;
 }
 
-* {
-  word-wrap: break-word;
-}
-
 pre {
     height: auto;
     max-height: 200px;
@@ -154,6 +147,11 @@ pre {
     word-wrap: normal !important;
     white-space: pre !important;
 }
+
+code {
+    word-break: break-word;
+}
+
 
 h1, h2, h3, h4, h5, h6 {
   font-size: 1.2em;
@@ -237,18 +235,23 @@ pre {
 }
 
 .scroller__content {
-  width: 100%;
-}
-
-.scroller__wrapper {
+  max-width: 640px;
   margin-left: auto;
   margin-right: auto;
 }
 
+.scroller__wrapper {
+  width: 100%;
+}
+
+
 /* compose */
 
 .compose {
-  margin-top: 1em;
+  max-width: 640px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 1.5em;
 }
 
 .theme {
@@ -296,11 +299,12 @@ textarea:focus, {
 }
 
 .message_actions {
-  float: right;
+  margin-left: auto;
+  margin-top: auto;
 }
 
 .message img:not(.emoji):not(.avatar--thumbnail):not(.avatar--profile) {
-  max-width: 97%;
+  max-width: 98%;
   border: 1px solid #ccc;
   padding: 4px;
 }
@@ -349,6 +353,7 @@ textarea:focus, {
 }
 
 /* emoji */
+
 .suggest-box img {
   height: 20px;
   width: 20px;
@@ -409,18 +414,6 @@ form.search {
   margin: .7em;
 }
 
-/* TextNodeSearcher highlights */
-
-.highlight {
-  background: yellow;
-}
-
-/* avatar editor */
-
-.hypercrop__canvas {
-  width: 100%;
-}
-
 /* gitssb */
 
 .git-table-wrapper {
@@ -434,29 +427,11 @@ form.search {
   width: 100%;
 }
 
-/* --- network status --- */
+/* aesthetic */
 
-.status {
-  width: 1em;
-  height: 1em;
-  margin: .5em;
-  background: green;
+body, input, button, p, li, h1, h2, h3, h4, h5, h6, textarea {
+  font-family: "Source Sans Pro", sans-serif;
 }
-
-.error {
-  background: red;
-}
-
-/* progress bar */
-
-.hyperprogress__bar {
-  background: darkgrey;
-}
-.hyperprogress__liquid {
-  background: lightblue;
-}
-
-
 
 
 .btn {
@@ -610,7 +585,6 @@ form.search {
   background-color: #408140 \9;
 }
 
-
 .btn-danger {
   color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
@@ -643,4 +617,5 @@ form.search {
 .btn-danger.active {
   background-color: #942a25 \9;
 }
+
 
